fixed hover issue where details overflowed image

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -194,8 +194,8 @@ ul {
 .img-wrap:hover .project-description {
     visibility: visible;
     opacity: 1;
-    height: 286px;
-    width: 390px;
+    height: 91%;
+    width: 94%;
 }
 
 .hover-hr {
